css/forum.css
/* ======================= LINKS & MAIN CODES ======================= */

body, .navbar {
	background-color: black;
}

a:visited,
a:link {
	text-decoration: none !important;
}

.linklist ul li a {
	font-weight: 200;
}

/* ======================= TYPOGRAPHY ======================= */

.mod-text {
	display: block;
	font-weight: 100;
}

span strong {
	color: #44947c;
	font-weight: 100;
}

/* ======================= MENU & TOOL BAR ======================= */

a.mainmenu[href="/search"] {
display: none;
}

a.mainmenu[href="/calendar"] {
display: none;
}

a.mainmenu[href="/groups"] {
display: none;
}

a.mainmenu[href="/faq"] {
display: none;
}

a.mainmenu[href="/gallery"] {
display: none;
}

#fa_toolbar #fa_magnifier, 
#fa_toolbar #fa_fb, 
#fa_toolbar #fa_twitter, 
#fa_toolbar #fa_gp, 
#fa_toolbar #fa_mail, 
#fa_toolbar #fa_rss, 
#fa_toolbar #fa_hide, 
#fa_toolbar_hidden #fa_show {
    background-image: url('http://l2dreamteam.com/images/forum/toolbar.png');
    width: 30px;
    height: 30px;
    cursor: pointer;
}

#fa_toolbar_hidden {
	width: 33px !important;
	height: 26px !important;
	padding: 3px;
}

#wrap,
.forabg,
.navbar {
	border: 0;
}

#fa_toolbar #fa_magnifier, 
#fa_toolbar #fa_fb, 
#fa_toolbar #fa_twitter, 
#fa_toolbar #fa_gp, 
#fa_toolbar #fa_mail, 
#fa_toolbar #fa_rss, 
#fa_toolbar #fa_hide, 
#fa_toolbar_hidden #fa_show {
	display: none !important;
}

#fa_toolbar_hidden {
	background-color: transparent;
}

#fa_right {
  padding-top: 1%;
  padding-right: 1em;
  font-weight: 100;
}

#fa_notifications {
	color: #efc663 !important;
}

#fa_left {
  display: none !important;
}

/* ======================= IMAGES ======================= */


/* ======================= LOGIN & ERRORS ======================= */

.login .errorwrap {
	display: none;

}

.borderwrap .subtitle {
	font-weight: 100;
	padding: 15px 0;
	text-align: center;
}

/* ======================= TABLES ======================= */

table.ipbtable td {
	vertical-align: middle;
	padding: 0;
}

td.row1.centered img,
span.status.clearfix img {
	width: 35px;
}

span.status.clearfix {
	margin-right: -60px;
	margin-left: -40px !important;
}

td.row2.icon {
	padding-left: 50px !important;
}

table.ipbtable th {
	border: 0;
	background-color: transparent;
}

table.ipbtable td.icon {
	vertical-align: middle !important;
}

table.ipbtable th.forum {
	width: 47%;
}

.topic-full {
	display: none;
}

.thin {
	border: 0;
}

.linklist.clearfix.statlinks {
	display: none;
}

.box-content,
.post {
	border-bottom: 4px solid #f5b233;
}

.post-footer ul.posting-icons {
	margin: 20px 0 10px 0;
}


/* ========= ULs & LIs ========== */

.ul-icons-home li img {
	width: 35px;
	margin: 0 .5em 0 1em;
}

#fa_search, #fa_share {
display: none !important;
}

#fa_right.welcome #fa_menu ul {
display: none;
}

/* ======================= FOOTER ======================= */

#gfooter {
	background-color: #000000;
}

/* ======================= MEDIA QUERIES ======================= */

